force-app/main/default/objects/RGC_Public_Disclosure__c/RGC_Public_Disclosure__c.object-meta.xml
<CustomObject>
    <label>RGC Public Disclosure</label>
    <nameField>
        <displayFormat>PD-{000}</displayFormat>
        <label>RGC Public Disclosure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Public Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>