force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Cohorts_Used__c.field-meta.xml
<CustomField>
    <fullName>Cohorts_Used__c</fullName>
    <label>Cohorts Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>