force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Disclosure_Type__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Type__c</fullName>
    <label>Disclosure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RGC Manuscripts-Abstracts</fullName>
            </value>
            <value>
                <fullName>External Manuscripts-Abstracts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>