force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RGC Public Disclosures</relationshipLabel>
    <relationshipName>RGC_Public_Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>