force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Journal_Conference__c.field-meta.xml
<CustomField>
    <fullName>Journal_Conference__c</fullName>
    <label>Journal/Conference</label>
    <type>TextArea</type>
</CustomField>