force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Lead_Author__c.field-meta.xml
<CustomField>
    <fullName>Lead_Author__c</fullName>
    <label>Lead Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>