force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Publication_Forum__c.field-meta.xml
<CustomField>
    <fullName>Publication_Forum__c</fullName>
    <label>Publication Forum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Journal</fullName>
            </value>
            <value>
                <fullName>Pre-preprint Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>