force-app/main/default/objects/RGC_Public_Disclosure__c/fields/REGN_Contact__c.field-meta.xml
<CustomField>
    <fullName>REGN_Contact__c</fullName>
    <label>REGN Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>