force-app/main/default/objects/RGC_Public_Disclosure__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>