force-app/main/default/objects/RGC_Public_Disclosure__c/fields/RGC_Banner__c.field-meta.xml
<CustomField>
    <fullName>RGC_Banner__c</fullName>
    <label>RGC Banner</label>
    <type>TextArea</type>
</CustomField>