force-app/main/default/objects/RGC_Public_Disclosure__c/fields/RGC_Datasets__c.field-meta.xml
<CustomField>
    <fullName>RGC_Datasets__c</fullName>
    <label>RGC Datasets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>