force-app/main/default/objects/RGC_Public_Disclosure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Publication_Title__c</columns>
    <columns>Publication_Type__c</columns>
    <columns>RGC_Datasets__c</columns>
    <columns>Therapeutic_Focus_Area__c</columns>
    <columns>Lead_Author__c</columns>
    <columns>REGN_Contact__c</columns>
    <columns>Date_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>